--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,19 +1,22 @@
 .navbar{
-    float: left;
+    display: flex;
+    width: 100%;
+    list-style: none;
+    background-color: rgb(255, 112, 112);
+    position: fixed;
 }
-.navbar li{
-    float: left;
-}
+
 .navbar li a {
     display: block;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.432);
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 .navbar li a:hover:not(.active){
-    background-color: black;
+    background-color: rgb(255, 87, 87);
 }
 .active{
-    background-color: #04aa6d;
+    background-color: rgb(255, 147, 147);
 }
