--- a/CSS/parallax.css
+++ b/CSS/parallax.css
@@ -1,6 +1,6 @@
 .parallax {
     /* The image used */
-    background-image: url("");
+    background-image: url("../images/pokemaster_332236.jpg");
   
     /* Set a specific height */
     min-height: 1000px; 
