--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,13 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-body {
-    font-family: 'sansation';
-}
 .main-content {
     padding: 40px;
-    background: linear-gradient(to bottom, #fefcea, #f1f1f1);
     flex-grow: 1;
-    min-height: 100vh;
     box-sizing: border-box;
+    overflow-y: auto; /* opcional: scroll interno si el contenido crece */
 }
 
 /* Hero section */
